	* src/Marriage.py (did_data_change): Compare gramps_id, not handle.

	* src/ReadXML.py (start_childof): Use integer relations.
	* src/WriteXML.py (write_xml_data): Properly test frel.
	* src/rule.glade: Change button label; add "need to close" label.
	* src/EditPlace.py: Typo.

	* src/FamilyView.py: Correct constants for birth relationship.

2005-03-09  Don Allingham  <don@gramps-project.org>
	* src/NameEdit.py: assign date on close

2005-03-08  Don Allingham  <don@gramps-project.org>
	* src/ChooseParents.py: change _nsort to _model
	* src/GrampsBSDDB.py: fix event secondary index function to that
	the event name is used instead of the GRAMPS id.

2005-03-08 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/EditPerson.py: Remove numerous multiple definitions.
	* src/AttrEdit.py (__init__): Set text to translated attribute type.
	* src/const.py.in (display_attr): Add function.

	* src/DbPrompter.py (ImportDbPrompter.chooser): Typo.

	* src/Marriage.py (on_add_clicked,on_event_update_clicked): Typos.
	* src/AddSpouse.py (select_spouse_clicked): Typo.

	* src/EditPerson.py (__init__): Only set update sources if possible
	(calls from ChooseParents don't provide the correct parent, but then
	the full update goes on anyway).
	* src/ChooseParents.py (mother_list_select_row,
	father_list_select_row): Comment out auto-selection of parents.

	* src/plugins/FilterEditor.py (on_delete_event,close_filter_editor):
	Update filter ComboBox in the main window.
	* src/gramps_main.py (init_filters): Clear layout before rebuilding.

2005-03-07 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/AddrEdit.py: Typo.
	* src/EditPerson.py (on_add_addr_clicked): Typos.
	* src/EditSource.py (display_references): Add lots of missed
	source references.
	* src/ImageSelect.py: Use PluginsMgr instead of Plugins.

2005-03-07  Don Allingham  <don@gramps-project.org>
	* src/RelLib.py: more documentation

2005-03-07 Alex Roitman  <shura@alex.neuro.umn.edu>